# pipe

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: python-ci.yaml
examples/: pipe_1.py  utils_usage.py  utils_usage_02.py
pipe/: pipe.py  utils.py
pipe/utils/: __init__.py  decorators.py  high_order_functions.py  list_functions.py  math.py  predicates.py  special.py
snippets/: proxy_function.py
tests/: test_pipe.py  test_pipe_utils.py
